--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "flowbite": "^3.1.2"
+        "@vitejs/plugin-vue": "^6.0.1",
+        "flowbite": "^3.1.2",
+        "vue": "^3.5.24"
     }
 }
